add all swag doc
